--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="root"></div>
   </body>
 </html>
